crates/aven-check/tests/fixtures/check/invalid/quoted-field-duplicate.av
bad = {
  name: 1
  "name": 2
}
